--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
   <body>
 
 
-  <p> Stephen Lucas, Lead Creative Progammer for Composition Studies at UNT created this game and programmed the code in 
-      html, css, and javascript. I have taken Stephen's game and made it minimal in the style of Abstract Expressionsim of the post-war
-    era. During our term you will take this code and repurpose the game to create an aesthetic of your own. W and S control the left paddle;
-      the up and down arrows control the right paddle. I made the sounds as notes generated in audacity; the ambient sound is relatively low note 
-      (measured in Hz) with a Paulstretch effect.</p>
+  <p> You catch yourself in a moment. An uncertain one, of both how you got here and what's going to happen next. <br> Somehow loud, scrambled, and painfully silent at the same time, all you can do is ruminate... </p>
     <br><br>
     
     <div id="game">
